--- a/signup.html
+++ b/signup.html
@@ -15,19 +15,20 @@
         <div class="row">
             <div class="col-4"></div>
             <div class="col-6">
-                <form action="" id="formulario">
-                    <input type="text" placeholder="Nombres" id="nombre" name="nombre">
-                    <input type="text" placeholder="Apellidos" id="apellido" name="apellido">
+                <form action="./php/registro.php" method="post" id="formulario">
+                    <input class="form-control" type="text" placeholder="Nombres" id="nombre" name="nombre">
+                    <input class="form-control" type="text" placeholder="Segundo nombre" id="nombre2" name="nombre2">
+                    <input class="form-control" type="text" placeholder="Apellidos" id="apellido" name="apellido">
                     <select name="id" id="tipoID">
                         <option value="Seleccione una opcion">Seleccione una opcion</option>
                         <option value="V">V</option>
                         <option value="E">E</option>
                     </select>
-                    <input type="text" name="cedula" id="id" placeholder="Cedula">
-                    <input type="email" name="correo" id="correo" placeholder="Correo">
-                    <input type="password" placeholder="Contraseña" id="password" name="password">
-                    <input type="password" placeholder="Confirmar contraseña" id="verifyPassword">
-                    <input type="submit" value="Registrarse">
+                    <input class="form-control" type="text" name="cedula" id="id" placeholder="Cedula">
+                    <input class="form-control" type="email" name="correo" id="correo" placeholder="Correo">
+                    <input class="form-control" type="password" placeholder="Contraseña" id="password" name="password">
+                    <input class="form-control" type="password" placeholder="Confirmar contraseña" id="verifyPassword">
+                    <input class="form-control" type="submit" value="Registrarse">
                 </form>
             </div>
         </div>
