--- a/login.html
+++ b/login.html
@@ -14,39 +14,24 @@
 <body>
     <header></header>
     <main>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-4">
-                    <img src="./img/pomarroso.jpg" alt="">
+            <form action="php/iniciar.php" method="post" id="formulario">
+                <div class="input-password">
+                    <i class="bi bi-key"></i>
+                    <input type="text" placeholder="Cedula" name="cedula" id="cedula">
                 </div>
-                <div class="col-8">
-                    <form action="">
-                        <div class="input-password">
-                            <i class="bi bi-key"></i>
-                            <input type="text" placeholder="Cedula">
-                        </div>
-                        <div class="input-password">
-                            <i class="bi bi-shield-lock"></i>
-                            <input type="password" placeholder="Contraseña">
-                        </div>
-                        <div class="registerbtn">
-                            <a href="">No tienes cuenta?</a>
-                        </div>
-                        <br>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col"><input type="submit" value="Entrar" class="boton"></div>
-                                <div class="col"><input type="button" value="Volver" class="boton"></div>
-                            </div>
-                        </div>
-                    </form>
+                <div class="input-password">
+                    <i class="bi bi-shield-lock"></i>
+                    <input type="password" placeholder="Contraseña" name="contra" id="password">
                 </div>
-            </div>
-            
-                
-        </div>
+                <div class="registerbtn">
+                    <a href="signup.html">No tienes cuenta?</a>
+                </div>
+                <br>
+                <div class="col"><input type="submit" value="Entrar" class="boton"></div>
+            </form>
     </main>
     <footer></footer>
+    <script src="js/login_validation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
