--- a/admin/home.html
+++ b/admin/home.html
@@ -1,9 +1,15 @@
 <?php
 	session_start();
+	require_once('../php/conn.php');
 
 	if(!isset($_SESSION['id'])){
 		header("Location: ../index.html");
 	}
+
+	$sql =  "SELECT * FROM tmaper;";
+	$sql2 = "SELECT * FROM tmaper WHERE perNom IS NOT NULL;";
+	$cedulas = mysqli_num_rows(mysqli_query($conn, $sql));
+	$usuarios = mysqli_num_rows(mysqli_query($conn, $sql2));
 ?>
 <!-- 
 * Copyright 2016 Carlos Eduardo Alfaro Orellana
@@ -201,17 +207,27 @@
 							</a>
 							<ul class="full-width menu-principal sub-menu-options">
 								<li class="full-width">
-									<a href="agregardatos.html" class="full-width">
+									<a href="./listuser_admin.html" class="full-width">
 										<div class="navLateral-body-cl">
 											<i class="zmdi zmdi-account"></i>
 										</div>
 										<div class="navLateral-body-cr hide-on-tablet">
-											AGREGAR DATOS
+											LISTA DE PERSONAS
 										</div>
 									</a>
 								</li>
 								<li class="full-width">
-									<a href="eliminardatos.html" class="full-width">
+									<a href="./agguser_admin.html" class="full-width">
+										<div class="navLateral-body-cl">
+											<i class="zmdi zmdi-account"></i>
+										</div>
+										<div class="navLateral-body-cr hide-on-tablet">
+											AGREGAR PERSONA
+										</div>
+									</a>
+								</li>
+								<li class="full-width">
+									<a href="./deleteuser_admin.html" class="full-width">
 										<div class="navLateral-body-cl">
 											<i class="zmdi zmdi-accounts"></i>
 										</div>
@@ -221,7 +237,7 @@
 									</a>
 								</li>
 								<li class="full-width">
-									<a href="actualizardatos.html" class="full-width">
+									<a href="updateuser_admin.html" class="full-width">
 										<div class="navLateral-body-cl">
 											<i class="zmdi zmdi-account"></i>
 										</div>
@@ -320,8 +336,9 @@
 			<article class="full-width tile">
 				<div class="tile-text">
 					<span class="text-condensedLight">
-						71<br>
-						<small>Usuarios</small>
+						<?php echo $cedulas; ?>
+						<br>
+						<small>Cedulas registradas</small>
 					</span>
 				</div>
 				<i class="zmdi zmdi-accounts tile-icon"></i>
@@ -329,8 +346,9 @@
 			<article class="full-width tile">
 				<div class="tile-text">
 					<span class="text-condensedLight">
-						7<br>
-						<small>Documentos</small>
+						<?php echo $usuarios; ?>
+						<br>
+						<small>Perfiles completos</small>
 					</span>
 				</div>
 				<i class="zmdi zmdi-truck tile-icon"></i>
