--- a/admin/updateuser_admin.html
+++ b/admin/updateuser_admin.html
@@ -88,6 +88,7 @@
 	        </a>  
 	    </section>
 	</section>
+	
 	<!-- navBar -->
 	<div class="full-width navBar">
 		<div class="full-width navBar-options">
@@ -104,7 +105,7 @@
 						<i class="zmdi zmdi-power"></i>
 						<div class="mdl-tooltip" for="btn-exit">LogOut</div>
 					</li>
-					<li class="text-condensedLight noLink" ><small><?php echo $_SESSION['name']; ?></small></li>
+					<li class="text-condensedLight noLink" ><small>User Name</small></li>
 					<li class="noLink">
 						<figure>
 							<img src="assets/img/avatar-male.png" alt="Avatar" class="img-responsive">
@@ -194,7 +195,7 @@
 							</a>
 							<ul class="full-width menu-principal sub-menu-options">
 								<li class="full-width">
-									<a href="./agguser_admin.html" class="full-width">
+									<a href="agguser_admin.php" class="full-width">
 										<div class="navLateral-body-cl">
 											<i class="zmdi zmdi-account"></i>
 										</div>
@@ -204,7 +205,7 @@
 									</a>
 								</li>
 								<li class="full-width">
-									<a href="./deleteuser_admin.html" class="full-width">
+									<a href="./deleteuser_admin.php" class="full-width">
 										<div class="navLateral-body-cl">
 											<i class="zmdi zmdi-accounts"></i>
 										</div>
@@ -214,7 +215,7 @@
 									</a>
 								</li>
 								<li class="full-width">
-									<a href="updateuser_admin.html" class="full-width">
+									<a href="./updateuser_admin.php" class="full-width">
 										<div class="navLateral-body-cl">
 											<i class="zmdi zmdi-account"></i>
 										</div>
@@ -311,6 +312,20 @@
 		<div class="full-width divider-menu-h"></div>
 		<div class="mdl-grid">
 			<div class="mdl-cell mdl-cell--4-col-phone mdl-cell--8-col-tablet mdl-cell--12-col-desktop">
+				<div class="container">
+					<div class="row">
+					  <div class="col-md-6 offset-md-3">
+						<form class="form-inline my-4">
+						  <div class="input-group w-100">
+							<input type="text" class="form-control" placeholder="Buscar..." aria-label="Buscar" aria-describedby="button-addon2">
+							
+							<input  type="submit" id=""><i class="fas fa-search"></i>
+						  </div>
+						</form>
+					  </div>
+					</div>
+				  </div>
+				  <br>
 				<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp full-width table-responsive">
 					<thead>
 						<tr>
