--- a/admin/actualizar.html
+++ b/admin/actualizar.html
@@ -304,7 +304,8 @@
 			</div>
 			<div class="full-width header-well-text">
 				<p class="text-condensedLight">
-					Mantener tus datos personales actualizados es crucial para brindarte la mejor experiencia posible. 				</p>
+					Mantener tus datos personales actualizados es crucial para brindarte la mejor experiencia posible.
+				</p>
 			</div>
 		</section>
 		<div class="full-width divider-menu-h"></div>
