Co-authored-by: hanneiker <hanneiker@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse " id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0 ">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Sobre Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./login.php">Iniciar Sesión</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./signup.php">Registrarse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <h5 class="text-white-75 mb-5 jh">¡Ingresa a nuestro sistema aquí! </h5>
-                        <a class="btn btn-light btn-xl jh" href="#about">Iniciar Sesión</a>
+                        <a class="btn btn-light btn-xl jh" href="./login.php">Iniciar Sesión</a>
                     </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                         <h2 class="text-white mt-0">Nuestra Comunidad</h2>
                         <hr class="divider divider-primary" />
                         <h5 class="text-white-75 mb-4">Barrio El Lobo, anidado en el corazón de San Cristóbal, Estado Táchira, se erige como un tesoro cultural en esta región llena de encanto. Este rincón pintoresco ha forjado su identidad a lo largo de los años, fusionando tradición y modernidad en una mezcla armoniosa.</h5>
-                        <a class="btn btn-light btn-xl" href="#services">Registrate!</a>
+                        <a class="btn btn-light btn-xl" href="./signup.php">Registrate!</a>
                     </div>
                 </div>
             </div>
